# svg

./: .gitignore  CMakeLists.txt  README.md
examples/: example1.cpp  example1_hello_word.cpp  example2_basic_shapes.cpp  example3_group.cpp  example4_style.cpp  example5_use_symbol.cpp  example6_image.cpp
src/svg/: BasicShapes.h  Color.cpp  Color.h  Point.h  SVGCircle.cpp  SVGCircle.h  SVGColor.cpp  SVGColor.h  SVGDocument.cpp  SVGDocument.h  SVGElement.cpp  SVGElement.h  SVGEllipse.cpp  SVGEllipse.h  SVGGroup.cpp  SVGGroup.h  SVGImage.cpp  SVGImage.h  SVGLine.cpp  SVGLine.h  SVGPolyLine.cpp  SVGPolyLine.h  SVGPolygon.cpp  SVGPolygon.h  SVGPolygone.cpp  SVGPolygone.h  SVGRectangle.cpp  SVGRectangle.h  SVGShape.cpp  SVGShape.h  SVGStyle.cpp  SVGStyle.h  SVGSymbol.cpp  SVGSymbol.h  SVGTransform.cpp  SVGUse.cpp  SVGUse.h  Stylable.cpp  Stylable.h  Style.cpp  (+5 more)
